tests/golden/compile-pass/match_literals_or_wildcard.rua
fn classify(value: i64) -> i64 {
    match value {
        0 => 10,
        1 | 2 => 20,
        _ => 30,
    }
}
