tests/golden/compile-fail/pattern_variant_arity.rua
enum Pair { Values(i64, i64) }

fn first(pair: Pair) -> i64 {
    match pair {
        Pair::Values(value) => value,
    }
}
